--- a/lab-03.Rmd
+++ b/lab-03.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 03 - Take a sad plot and make it better"
-author: "Gregor Mackay, Xiaoduo Yang, YIXIN JIANG and User4 - Team Name"
+author: "Gregor Mackay, Xiaoduo Yang, YIXIN JIANG and User4 - Group 4"
 date: "`r Sys.Date()`"
 output: html_document
 ---
