--- a/lab-03.Rmd
+++ b/lab-03.Rmd
@@ -1,10 +1,6 @@
 ---
 title: "Lab 03 - Take a sad plot and make it better"
-<<<<<<< HEAD
-author: "Gregor Mackay, Xiaoduo Yang, YIXIN JIANG and User4 - Group 4"
-=======
-author: "Gregor Mackay, Xiaoduo Yang, YIXIN JIANG and YIFEI DONG - Team Name"
->>>>>>> 11f289826f5b5bdc9338163d69bbd58767e18666
+author: "Gregor Mackay, Xiaoduo Yang, YIXIN JIANG and YIFEI DONG - Group 4"
 date: "`r Sys.Date()`"
 output: html_document
 ---
